# supex

./: .gitignore  .gitmodules  .rubocop.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTE.md  Gemfile  LICENSE  README.md  mcp  mise.toml  repl  sketchup-docs  supex
assets/sources/: supex-architecture-poster-prompt.md  supex-hero-poster-prompt.md
docgen/: .gitignore  .rubocop.yml  .yardopts  Gemfile  README.md  filter_config.yml
docgen/scripts/: build_index.rb  build_sketchup_api_index.rb  doc_helpers.rb  generate_docs.sh  generate_markdown_docs.rb  generate_sketchup_api_docs.rb
docs/: ARCHITECTURE.md  CONTRIBUTE.md  architecture.md  cli.md  configuration.md  mcp.md  protocol.md  repl.md  security.md  troubleshooting.md
docs/agents/: README.md  api  best_practices.md  prompt.md  quick_reference.md  workflow.md
driver/: README.md  pyproject.toml
driver/prompts/: sketchup_workflow.md
driver/resources/: index.md  workflow.md
driver/resources/docs/: INDEX.md  api  index.md  workflow.md
driver/src/supex_driver/: __init__.py  __main__.py
driver/tests/: __init__.py  test_cli.py  test_connection.py  test_integration.py  test_mcp.py  test_output.py
driver/tests/helpers/: __init__.py  mock_runtime.py
examples/: README.md  USER-CLAUDE.md
examples/simple-table/: .gitignore  .rubocop.yml  CLAUDE.md  Gemfile  README.md
examples/simple-table/.claude/: mcp.json
examples/simple-table/scripts/: add_decorations.rb  create_table.rb  helpers.rb
runtime/: .rubocop.yml  Gemfile  README.md  Rakefile
runtime/ide_stubs/: README.md  extensions.rb  sketchup.rb
runtime/src/: injector.rb  repl.rb  supex_runtime.rb
runtime/src/supex_runtime/: batch_screenshot.rb  bridge_server.rb  console_capture.rb  export.rb  main.rb  path_policy.rb  repl_server.rb  server.rb  tools.rb  utils.rb  version.rb
runtime/test/: test_batch_screenshot.rb  test_bridge_server.rb  test_export.rb  test_helper.rb  test_main.rb  test_path_policy.rb  test_repl_client.rb  test_repl_eval.rb  test_repl_integration.rb  test_utils.rb
runtime/test/helpers/: sketchup_mocks.rb  test_helper.rb  test_servers.rb  test_utilities.rb
scripts/: add_decorations.rb  changelog-prompt.md  changelog.sh  clean-repl.sh  generate-agents-override.sh  helpers.rb  launch-mcp.sh  launch-sketchup.sh  launch-tests.sh  lint.sh  regenerate-sketchup-api-docs.sh  release.sh  reload-extension.sh
scripts/helpers/: common.sh  get-window-position.applescript  manage-window-position.sh  set-window-position.applescript  shutdown-sketchup.applescript
src/: add_decorations.rb  add_vase.rb  create_table.rb  helpers.rb  sketchup_extensions.rb
src/driver/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/driver/examples/: 3d_modeling.py  ruby_modeling.py
src/driver/prompts/: sketchup_workflow.md
src/driver/resources/: best_practices.md
src/driver/scripts/: reload_extension.py
src/driver/src/supex_driver/: __init__.py  __main__.py
src/driver/src/supex_driver/cli/: __init__.py  main.py
src/driver/src/supex_driver/mcp/: __init__.py  server.py
src/driver/tests/: test_cli.py  test_connection.py  test_mcp.py
src/runtime/: .rubocop.yml  Gemfile  README.md  Rakefile  supex_runtime.rb
src/runtime/supex_runtime/: export.rb  server.rb  version.rb
stdlib/: .rubocop.yml  Gemfile  README.md  Rakefile
stdlib/src/: supex_stdlib.rb
stdlib/src/supex_stdlib/: color.rb  component_definition.rb  edge.rb  entity.rb  face.rb  geom.rb  platform.rb  shell.rb  utils.rb  version.rb
stdlib/test/: color_test.rb  component_definition_test.rb  edge_test.rb  entity_test.rb  face_test.rb  geom_test.rb  platform_test.rb  test_helper.rb
stdlib/test/geom/: bounding_box_test.rb  (+5 more)
tests/: README.md  conftest.py  mise.toml  pyproject.toml
tests/data/: template.skp
tests/e2e/: __init__.py  test_batch_screenshots.py  test_connection.py  test_error_handling.py  test_file_operations.py  test_introspection.py  test_model_operations.py
tests/helpers/: __init__.py  assertions.py  cli_runner.py  sketchup_process.py
tests/snippets/: .rubocop.yml  Gemfile  README.md
tests/snippets/src/: conftest.rb  helpers.rb  loader.rb  test_batch_screenshots.rb  test_error_handling.rb  test_introspection.rb  test_model_operations.rb
(+18 files in other folders)
