[project]
name = "supex-tests"
version = "0.1.0"
description = "E2E tests for supex SketchUp automation platform"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["e2e"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
